--- a/index.html
+++ b/index.html
@@ -1,77 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+		
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+
 		<title>minefield</title>
 	</head>
 
-
-<script type="text/javascript">
-
-var min = 0 ;
-var max = 7 ;
-
-var targetX = getRandomIntInclusive( min , max );
-var targetY = getRandomIntInclusive( min , max );
-
-var loserX = getRandomIntInclusive( min , max );
-var loserY = getRandomIntInclusive( min , max );
-
-function getRandomIntInclusive(min, max) {
-  min = Math.ceil(min);
-  max = Math.floor(max);
-  return Math.floor(Math.random() * (max - min + 1)) + min; 
-}
-
-function myFunction(x, y) {
-	var clickElements = document.getElementById(x + "-" + y);
-  if ( targetX === x && targetY === y){
-  	console.log("you won have a beer");
-  	setBackroundImage(clickElements, "beer")  
-  }
-
-  else if ( loserX === x && loserY === y){
-  	console.log("loser");
-  	setBackroundImage(clickElements, "skull")
-  }
-  else {
-    console.log("missed " + x + " " + y);
-    if ( x < targetX){
-	setBackroundImage(clickElements, "east")
-    }
-    if ( x > targetX){
-    setBackroundImage(clickElements, "west")	
-    }
-    if ( y > targetY){
-    setBackroundImage(clickElements, "north")
-    }
-    if ( y < targetY){
-    setBackroundImage(clickElements, "south")
-    }
-  }
-
-}
-
-function setBackroundImage(clickElements, backgroundImage) {
-
-clickElements.setAttribute("style", "background-image:url('./assets/images/"+ backgroundImage + ".png')");
-
-}
-
-</script>
-
-	</head>
 	<body class="background">
-		<div class="container-fluid">
-			<div class="col-xs-8 col-md-offset-4">
-				<div class="title">find the beer</div>
+				<header><h1 class="title">find the beer</h1></header>
 				<div class="instuction">
 				Help our viking to find his beer.<br>
 				Follow the arrows and try to find the beer, but attention at the skull</div>
 				
 				<div class="grid">
-					<div class="row 01">
+					<div class="row">
 					  <div id="0-0" class="col-md-1 1 -1" onclick="myFunction(0, 0);"></div>
 					  <div id="1-0" class="col-md-1 2 -1" onclick="myFunction(1, 0);"></div>
 					  <div id="2-0" class="col-md-1 3 -1" onclick="myFunction(2, 0);"></div>
@@ -81,7 +24,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-0" class="col-md-1 7 -1" onclick="myFunction(6, 0);"></div>
 					  <div id="7-0" class="col-md-1 8 -1" onclick="myFunction(7, 0);"></div>
 					</div>
-					<div class="row 02">
+					<div class="row">
 					  <div id="0-1" class="col-md-1 1 -2" onclick="myFunction(0, 1);"></div>
 					  <div id="1-1" class="col-md-1 2 -2" onclick="myFunction(1, 1);"></div>
 					  <div id="2-1" class="col-md-1 3 -2" onclick="myFunction(2, 1);"></div>
@@ -91,7 +34,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-1" class="col-md-1 7 -2" onclick="myFunction(6, 1);"></div>
 					  <div id="7-1" class="col-md-1 8 -2" onclick="myFunction(7, 1);"></div>
 					</div>
-					<div class="row 03">
+					<div class="row">
 					  <div id="0-2" class="col-md-1 1 -3" onclick="myFunction(0, 2);"></div>
 					  <div id="1-2" class="col-md-1 2 -3" onclick="myFunction(1, 2);"></div>
 					  <div id="2-2" class="col-md-1 3 -3" onclick="myFunction(2, 2);"></div>
@@ -101,7 +44,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-2" class="col-md-1 7 -3" onclick="myFunction(6, 2);"></div>
 					  <div id="7-2" class="col-md-1 8 -3" onclick="myFunction(7, 2);"></div>
 					</div>
-					<div class="row 04">
+					<div class="row">
 					  <div id="0-3" class="col-md-1 1 -4" onclick="myFunction(0, 3);"></div>
 					  <div id="1-3" class="col-md-1 2 -4" onclick="myFunction(1, 3);"></div>
 					  <div id="2-3" class="col-md-1 3 -4" onclick="myFunction(2, 3);"></div>
@@ -111,7 +54,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-3" class="col-md-1 7 -4" onclick="myFunction(6, 3);"></div>
 					  <div id="7-3" class="col-md-1 8 -4" onclick="myFunction(7, 3);"></div>
 					</div>
-					<div class="row 05">
+					<div class="row">
 					  <div id="0-4" class="col-md-1 1 -5" onclick="myFunction(0, 4);"></div>
 					  <div id="1-4" class="col-md-1 2 -5" onclick="myFunction(1, 4);"></div>
 					  <div id="2-4" class="col-md-1 3 -5" onclick="myFunction(2, 4);"></div>
@@ -121,7 +64,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-4" class="col-md-1 7 -5" onclick="myFunction(6, 4);"></div>
 					  <div id="7-4" class="col-md-1 8 -5" onclick="myFunction(7, 4);"></div>
 					</div>
-					<div class="row 06">
+					<div class="row">
 					  <div id="0-5" class="col-md-1 1 -6" onclick="myFunction(0, 5);"></div>
 					  <div id="1-5" class="col-md-1 2 -6" onclick="myFunction(1, 5);"></div>
 					  <div id="2-5" class="col-md-1 3 -6" onclick="myFunction(2, 5);"></div>
@@ -131,7 +74,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-5" class="col-md-1 7 -6" onclick="myFunction(6, 5);"></div>
 					  <div id="7-5" class="col-md-1 8 -6" onclick="myFunction(7, 5);"></div>
 					</div>
-					<div class="row 07">
+					<div class="row">
 					  <div id="0-6" class="col-md-1 1 -7" onclick="myFunction(0, 6);"></div>
 					  <div id="1-6" class="col-md-1 2 -7" onclick="myFunction(1, 6);"></div>
 					  <div id="2-6" class="col-md-1 3 -7" onclick="myFunction(2, 6);"></div>
@@ -141,7 +84,7 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="6-6" class="col-md-1 7 -7" onclick="myFunction(6, 6);"></div>
 					  <div id="7-6" class="col-md-1 8 -7" onclick="myFunction(7, 6);"></div>
 					</div>
-					<div class="row 08">
+					<div class="row">
 					  <div id="0-7" class="col-md-1 1 -8" onclick="myFunction(0, 7);"></div>
 					  <div id="1-7" class="col-md-1 2 -8" onclick="myFunction(1, 7);"></div>
 					  <div id="2-7" class="col-md-1 3 -8" onclick="myFunction(2, 7);"></div>
@@ -152,9 +95,9 @@ clickElements.setAttribute("style", "background-image:url('./assets/images/"+ ba
 					  <div id="7-7" class="col-md-1 8 -8" onclick="myFunction(7, 7);"></div>
 					</div>
 				</div>
-							</div>
-		</div>
-		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-		<script src='bootstrap/js/bootstrap.min.js'></script>
+							
+				<script type="text/javascript" src="./script.js"></script>
+
+
 	</body>
 </html>
